--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,23 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Bangers&display=swap");
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background-image: url(./assets/bg-image.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+.title {
+  color: darkblue;
+  text-shadow: 5px 5px 5px goldenrod;
+  padding: 5px;
+  display: inline-block;
+  font-family: "Bangers", serif;
 }
